--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ button:hover {
         max-width: 300px;
     }
     .preview {
-        background: url('./images/image-product-mobile.jpg');
+        background: url("./images/image-product-mobile.jpg");
         background-position: center;
         background-size: cover;
         width: 300px;
